css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Preahvihear&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@400&display=swap');

:root {
    /* header */
    --font-style: 'Preahvihear', sans-serif;
    --img-height: 1.8rem;
    --img-add-height: 2.2rem;
    --font-size: 2.2rem;
    --header-height: 10vh;
    --margin-left: 0.5rem;
    /* popup */
    --popup-width: fit-content;
    --popup-height: 65vh;
    --popup-top: 50%;
    --popup-left: 50%;
    --popup-border-radius: 20px;
    --popup-background-color: #f5f5f4;
    /* scroll bar */
    --scrollbar-width: 15px;
    --scrollbar-thumb-color: #888;
    /* form */
    --form-font-family: 'Prompt', sans-serif;
    --form-font-size: 1.8rem;
    --form-span-margin: 2rem;
    --input-height: 5vh;
    --input-width: 80%;
    --input-margin: .8rem 0px;
    --input-padding: 0 1.5rem;
    --input-border-radius: 5px;
    /* tick box */
    --tickBox-margin: 20px auto;
    --tickBox-span-margin-right: 1.5rem;
    /* buttons */
    --button-margin-div: 2rem;
    --button-height: 50px;
    --button-width: 8vw;
    --button-margin: 0 1rem;
    --button-border-radius: 5px;
    --button-background-color: #fde68a;
    --button-last-background-color: #dc2626;
    --button-hover-background-color: #fbbf24;
    --button-last-hover-background-color: #991b1b;
}

/* header */
header {
    user-select: none;
    display: grid;
    align-items: center;
    grid-template-columns: 1fr 1fr 1fr;
    height: var(--header-height);
}

header > div {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    margin-left: var(--margin-left);
}

header > div > img {
    height: var(--img-height);
    width: auto;
}

header > div > span {
    font-family: var(--font-style);
    font-size: var(--font-size);
    margin-left: var(--margin-left);
}

header > img {
    height: var(--img-add-height);
    justify-self: center;
}

header > img:hover {
    cursor: pointer;
    animation: rotate 0.6s forwards;
}

@keyframes rotate {
    0% {
        transform: scale(1) rotate(0deg);
    }
    100% {
        transform: scale(1.2) rotate(180deg);
    }
}

/* popup */
#popup {
    display: none;
    position: fixed;
    top: var(--popup-top);
    left: var(--popup-left);
    transform: translate(-50%, -50%);
    z-index: 100;
    width: var(--popup-width);
    height: var(--popup-height);
    background-color: var(--popup-background-color);
    border-radius: var(--popup-border-radius);
    overflow: auto;
}

/* scroll bar */
#popup::-webkit-scrollbar {
    width: var(--scrollbar-width);
}

#popup::-webkit-scrollbar-track {
    background: var(--popup-background-color);
}

#popup::-webkit-scrollbar-thumb {
    background: var(--scrollbar-thumb-color);
}

/*form*/
form {
    display: flex;
    flex-direction: column;
    align-items: center;
    font-family: var(--form-font-family);
    font-size: var(--form-font-size);
}

form > span {
    margin: var(--form-span-margin);
}

form > div:first-of-type {
    display: flex;
    flex-direction: column;
    align-items: center;
}

form > div:first-of-type > input {
    height: var(--input-height);
    width: var(--input-width);
    margin: var(--input-margin);
    padding: var(--input-padding);
    border: none;
    border-radius: var(--input-border-radius);
}

form > div:first-of-type > input:focus {
    outline: none;
}

/* tick box */
.container {
    display: flex;
    flex-direction: row;
    align-items: center;
    margin: var(--tickBox-margin);
}

.container > span {
    margin-right: var(--tickBox-span-margin-right);
}

.readBox {
    width: 20px;
    position: relative;
}

.readBox label {
    width: 20px;
    height: 20px;
    cursor: pointer;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background: #fcfff4;
    background: linear-gradient(to bottom, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
    border-radius: 4px;
    box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0, 0, 0, 0.5);
}

.readBox label:after {
    content: '';
    width: 9px;
    height: 5px;
    position: absolute;
    top: 4px;
    left: 4px;
    border: 3px solid #333;
    border-top: none;
    border-right: none;
    background: transparent;
    opacity: 0;
    transform: rotate(-45deg);
}

.readBox label:hover::after {
    opacity: 0.5;
}

.readBox input[type=checkbox] {
    visibility: hidden;
}

.readBox input[type=checkbox]:checked + label:after {
    opacity: 1;
}

/* buttons */
form > div:last-of-type {
    display: flex;
    flex-direction: row;
    margin: var(--button-margin-div);
}

form > div:last-of-type > button {
    height: var(--button-height);
    width: var(--button-width);
    margin: var(--button-margin);
    border: none;
    border-radius: var(--button-border-radius);
    background-color: var(--button-background-color);
    box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0, 0, 0, 0.5);
}

form > div:last-of-type > button:last-child {
    background-color: var(--button-last-background-color);
}

form > div:last-of-type > button:hover {
    cursor: pointer;
    transition: .6s;
    background-color: var(--button-hover-background-color);
}

form > div:last-of-type > button:last-child:hover {
    background-color: var(--button-last-hover-background-color);
}

/* media queries */
@media screen and (max-width: 1500px) {
    form > div:last-of-type {
        flex-direction: column;
    }
    form > div:last-of-type > button {
        margin: .5rem 0;
        width: 120px;
    }
}

@media screen and (max-width: 1000px) {
    html {
        font-size: 80%;
    }
}

@media screen and (max-width: 750px) {
    html {
        font-size: 75%;
    }
    #popup {
        width: 90%;
    }
    .container {
        flex-direction: column;
    }
    .container > span {
        margin: 0;
    }
    .readBox label:hover::after {
        opacity: 0;
    }
}

